<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- 캘린더 이름 입력 -->
    <EditText
        android:id="@+id/calendarName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/hint_calendar_name"
        android:inputType="text"
        android:minHeight="48dp" />

    <!-- 캘린더 계정 이름 입력 -->
    <EditText
        android:id="@+id/accountNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/hint_account_name"
        android:minHeight="48dp" />


    <!--<TextView
        android:id="@+id/eventCount"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count_event"
        android:textSize="16sp"
        android:paddingTop="8dp" />-->

    <Button
        android:id="@+id/saveButton"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_calendar" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_calendar" />
</LinearLayout>