<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <!-- 캘린더 선택 CheckBox -->
    <CheckBox
        android:id="@+id/calendarCheckBox"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="10dp" />

    <!-- 캘린더 이름 TextView -->
    <TextView
        android:id="@+id/calendarName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/calendar_name"
        android:textSize="16sp" />

    <!-- 수정 아이콘 -->
    <ImageView
        android:id="@+id/editIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_calendar"
        android:contentDescription="@string/edit_calendar"
        android:layout_marginStart="16dp"
        android:layout_gravity="center_vertical" />

    <!-- 삭제 아이콘 -->
    <ImageView
        android:id="@+id/deleteIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_delete"
        android:contentDescription="@string/delete_calendar"
        android:layout_marginStart="16dp"
        android:layout_gravity="center_vertical" />
</LinearLayout>
